<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="@android:layout/test_list_item">



    <item

        android:checkable="false"
        android:id="@+id/nav_settings"
        android:title="@string/navSettings" />

    <item

        android:checkable="false"
        android:id="@+id/nav_email"
        android:title="@string/navEmail" />

    <!--<item android:title="@string/otherSettings">
        <menu>-->
    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">

        <item
            android:checkable="false"
            android:id="@+id/nav_tab1"
            android:title="@string/menu_tab1" />
        <item
            android:checkable="false"
            android:id="@+id/nav_tab2"
            android:title="@string/menu_tab2" />
        <item
            android:checkable="false"
            android:id="@+id/nav_tab3"
            android:title="@string/menu_tab3" />
        <item
            android:checkable="false"
            android:id="@+id/nav_tab4"
            android:title="@string/menu_tab4" />
    </group>
    <!-- </menu>
        </item>-->

    <group android:id="@+id/grp3">
        <item
        android:checkable="false"
        app:actionViewClass="android.widget.CheckBox"
        android:id="@+id/nav_contribute"
        android:title="@string/Contribute" />
    </group>

    <group android:id="@+id/grp4">
        <item
            android:checkable="false"
            android:id="@+id/nav_exit"
            android:title="@string/navExit" />
    </group>

</menu>