<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_window_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.menu.PopUpSettings">

    <LinearLayout
        android:id="@+id/popup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/popup_window_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/titlepopup"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:autoSizeMaxTextSize="24dp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/popup_window_text_time"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/textSampleTime"
            android:textAlignment="center"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/popup_window_title" />

        <androidx.appcompat.widget.AppCompatSeekBar

            android:id="@+id/seekBarTime"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toBottomOf="@+id/popup_window_text_time" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/popup_window_text_distance"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/textSampleDistance"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/popup_window_title" />

        <androidx.appcompat.widget.AppCompatSeekBar

            android:id="@+id/seekBarDistance"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toBottomOf="@+id/popup_window_text_distance" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="false"
            android:focusable="false"
            android:longClickable="false"
            android:orientation="horizontal">

            <Button
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_folder"
                android:clickable="false"
                android:focusable="false"
                android:longClickable="false" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/popup_window_folder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusable="false"
                android:layout_marginLeft="5dp"
                android:gravity="center|center_horizontal|left"
                android:longClickable="false"
                android:text="@string/pop_up_window_tv_folder"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/popup_window_title" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <CheckBox
            android:id="@+id/pop_up_checkBox_towers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:checked="true"
            android:text="@string/pop_up_checkbox_towers"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/pop_up_checkBox_samples"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:checked="true"
            android:text="@string/pop_up_checkbox_samples"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Thresholds"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:gravity="center"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:baselineAligned="false"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="" />
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:src="@drawable/circle_dot_green_icon" />
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:src="@drawable/circle_dot_yellow_icon" />
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:src="@drawable/circle_dot_red_icon"
                android:layout_weight="0.33"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:src="@drawable/circle_dot_black_icon"
                android:layout_weight="0.33"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:baselineAligned="false"
        android:layout_marginLeft="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="Mobile"
            android:textSize="12dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/threMobGreen"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:layout_weight="0.9"
            android:inputType="number"
            android:text="50"
            android:textColor="#000"
            android:textSize="12dp"
            android:textStyle="bold"
            android:gravity="center"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/threMobYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="-120"
            android:textColor="#000"
            android:textSize="12dp"
            android:textStyle="bold"
            android:layout_weight="0.33"
            android:inputType="number"  />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/threMobRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="-120"
            android:textColor="#000"
            android:textSize="12dp"
            android:textStyle="bold"
            android:layout_weight="0.33"
            android:inputType="number"  />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/threMobBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="-120"
            android:textColor="#000"
            android:textSize="12dp"
            android:textStyle="bold"
            android:layout_weight="0.33"
            android:inputType="number"  />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:baselineAligned="false"
        android:layout_marginLeft="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text="WIFI"
            android:textSize="12dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/threWifiGreen"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:layout_weight="0.9"
            android:inputType="number"
            android:text="30"
            android:textColor="#000"
            android:textSize="12dp"
            android:textStyle="bold"
            android:gravity="center"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/threWifiYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="-120"
            android:textColor="#000"
            android:textSize="12dp"
            android:textStyle="bold"
            android:layout_weight="0.33"
            android:inputType="number"  />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/threWifiRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="-120"
            android:textColor="#000"
            android:textSize="12dp"
            android:textStyle="bold"
            android:layout_weight="0.33"
            android:inputType="number"  />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/threWifiBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="-120"
            android:textColor="#000"
            android:textSize="12dp"
            android:textStyle="bold"
            android:layout_weight="0.33"
            android:inputType="number"  />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:baselineAligned="false"
        android:layout_marginLeft="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:textSize="12dp"
            android:text="(-) dBm"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:textSize="12dp"
            android:text="(-) dBm"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:textSize="12dp"
            android:text="(-) dBm"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:textSize="12dp"
            android:text="(-) dBm"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>